--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -3,7 +3,7 @@
     justify-content: space-between;
 }
 
-.left-h{
+.left-h {
     padding: 2rem;
     padding-top: 1.5rem;
     flex: 3;
@@ -12,11 +12,13 @@
     flex-direction: column;
 }
 
-.right-h{
+.right-h {
     flex: 1;
+    position: relative;
+    background-color: var(--orange);
 }
 
-.the-best-ad{
+.the-best-ad {
     margin-top: 4rem;
     background-color: #363d42;
     border-radius: 4rem;
@@ -29,11 +31,12 @@
     align-items: center;
     justify-content: flex-start;
 }
-.the-best-ad>span{
+
+.the-best-ad>span {
     z-index: 2;
 }
 
-.the-best-ad>div{
+.the-best-ad>div {
     position: absolute;
     background-color: var(--orange);
     width: 5.4rem;
@@ -43,7 +46,7 @@
     z-index: 1;
 }
 
-.banner-text{
+.banner-text {
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
@@ -54,7 +57,7 @@
     text-overflow: inherit;
 }
 
-.banner-text>div:nth-of-type(3){
+.banner-text>div:nth-of-type(3) {
     font-size: 1rem;
     font-weight: 200;
     text-transform: none;
@@ -62,41 +65,118 @@
     width: 80%;
 }
 
-.figures{
+.figures {
     display: flex;
     gap: 2rem;
 }
 
-.figures>div{
+.figures>div {
     display: flex;
     flex-direction: column;
 }
 
-.figures>div>span:nth-of-type(1){
+.figures>div>span:nth-of-type(1) {
     color: white;
     font-size: 2rem;
 }
 
-.figures>div>span:nth-of-type(2){
+.figures>div>span:nth-of-type(2) {
     color: var(--gray);
     text-transform: uppercase;
 }
 
-.banner-buttons{
+.banner-buttons {
     display: flex;
     gap: 1rem;
     font-weight: normal;
 }
 
-.banner-buttons>:nth-child(1){
+.banner-buttons>:nth-child(1) {
     color: white;
     background-color: var(--orange);
     width: 8rem;
 }
 
-.banner-buttons>:nth-child(2){
+.banner-buttons>:nth-child(2) {
     color: white;
     background-color: transparent;
     width: 8rem;
     border: 2px solid var(--orange);
+}
+
+.right-h>.btn {
+    position: absolute;
+    right: 3rem;
+    top: 2rem;
+    color: black;
+}
+
+.heart-rate {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    background-color: var(--darkGrey);
+    width: fit-content;
+    padding: 1rem;
+    align-items: start;
+    border-radius: 5px;
+    position: absolute;
+    right: 4rem;
+    top: 7rem;
+}
+
+.heart-rate>img {
+    width: 2rem;
+}
+
+.heart-rate>:nth-child(2) {
+    color: var(--gray);
+}
+
+.heart-rate>:nth-child(3) {
+    color: white;
+    font-size: 1.5rem;
+}
+
+.banner-image {
+    position: absolute;
+    top: 10rem;
+    right: 8rem;
+    width: 23rem;
+}
+
+.banner-image-back {
+    position: absolute;
+    top: 4rem;
+    right: 20rem;
+    z-index: -1;
+    width: 15rem;
+}
+
+.calories {
+    display: flex;
+    gap: 2rem;
+    background-color: var(--caloryCard);
+    border-radius: 5px;
+    padding: 1rem;
+    width: fit-content;
+    position: absolute;
+    top: 32rem;
+    right: 28rem;
+}
+.calories>img{
+    width: 3rem;
+}
+
+.calories>div{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.calories>div>:nth-child(1){
+    color: var(--gray);
+}
+.calories>div>:nth-child(2){
+    color: white;
+    font-size: 1.5rem;
 }
