--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -186,3 +186,70 @@
     height: 30rem;
     left: 0;
 }
+
+@media screen and (max-width: 768px) {
+    .banner {
+        flex-direction: column;
+    }
+    .banner-blur {
+        width: 14rem;
+    }
+    .the-best-ad {
+        margin-top: 0;
+        font-size: small;
+        align-self: center;
+        transform: scale(0.8);
+    }
+    .banner-text {
+        font-size: xx-large;
+        align-items: center;
+        justify-content: center;
+    }
+    .banner-text>div:nth-of-type(3){
+        font-size: small;
+        font-weight: 200;
+        letter-spacing: 1px;
+        text-align: center;
+    }
+    .banner-buttons{
+        justify-content: center;
+    }
+    .figures>div>span:nth-of-type(1){
+        font-size: large;
+    }
+    .figures>div>span:nth-of-type(2){
+        font-size: small;
+    }
+    .right-h{
+        position: relative;
+        background: none;
+    }
+    .heart-rate{
+        left: 1rem;
+        top: 2rem;
+    }
+    .calories{
+        position: relative;
+        top: 5rem;
+        left: 2rem;
+    }
+    .calories>img{
+        width: 2rem;
+    }
+    .calories>div>:nth-child(2){
+        color: white;
+        font-size: 1rem;
+    }
+    .banner-image{
+        position: relative;
+        width: 15rem;
+        left: 7rem;
+        top: 4rem;
+        align-self: center;
+    }
+    .banner-image-back{
+        width: 15rem;
+        left: 2rem;
+        top: 0rem;
+    }
+}
